fix buttons on mobile

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -109,6 +109,8 @@
 		font-size: 13px;
 		border: 1px solid #8f398d;
 		font-weight: 400;
+		border-color: #8f398d;
+		color: #fff;
 	}
 	.bannar-conent-area {
 	    bottom: 20px;
